# app/Http/Controllers/Controller.php
@@ -10,6 +10,13 @@ use OpenApi\Annotations as OA;
  *     version="1.0.0",
  *     description="API documentation for Healthy"
  * )
+ *
+ * @OA\SecurityScheme(
+ *     type="http",
+ *     scheme="bearer",
+ *     securityScheme="bearerAuth",
+ *     bearerFormat="JWT"
+ * )
  */
 abstract class Controller
 {
